assets/css/admin.css
/* ... */
ul.wpuf-form .wpuf-field-columns .wpuf-column-field-inner-columns .wpuf-column .wpuf-column-inner-fields ul.wpuf-column-fields-sortable-list li.column-field-items .wpuf-column-field-control-buttons i.move {
  cursor: move;
}
ul.wpuf-form .wpuf-field-columns .wpuf-column-field-inner-columns .wpuf-column .wpuf-column-inner-fields .drop-message {
  text-align: center;
  border: 1px dashed #ffb900;
  border-top: 0;
  background: rgba(255, 185, 0, 0.08);
  margin: 0;
  padding: 15px 0;
}
#form-preview-stage .field-items .wpuf-field-columns + div.control-buttons {
  top: 10px;
  z-index: 10;
  height: auto;
  margin: 0;
  background: transparent;
  border: 0;
}
.wpuf-setup-menu-link {
  display: none;
}
tr.pro-preview td {
  display: inline-block;
  position: relative;
}
.pro-preview-html {
  position: relative;
}
tr.pro-preview td:hover .pro-field-overlay,
.pro-preview-html:hover .pro-field-overlay {
  -webkit-opacity: 1;
  opacity: 1;
  display: block;
}
tr.pro-preview .pro-field-overlay,
.pro-preview-html .pro-field-overlay,
.metabox-holder .pro-field-overlay {
  position: absolute;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.4);
  border-radius: 5px;
  top: 0;
  left: 0;
  display: none;
}
tr.pro-preview-html th {
  width: 50%;
}
.pro-preview-html:hover ~ .pro-field-overlay {
  display: block;
}
.pro-field-overlay:hover {
  display: block;
}
.wpuf-subscription-pack-settings nav .tab-current a.wpuf-button.button-upgrade-to-pro,
a.wpuf-button.button-upgrade-to-pro {
  padding: 10px 15px;
  background: #ff9000;
  color: #fff;
  min-height: auto;
  border-radius: 5px;
  text-decoration: none;
  border: none;
}
.pro-field-overlay a.wpuf-button.button-upgrade-to-pro {
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}
.wpuf-subscription-pack-settings nav .tab-current a.wpuf-button.button-upgrade-to-pro:hover,
a.wpuf-button.button-upgrade-to-pro:hover {
  background: #d07805;
}
span.pro-icon svg {
  height: 1em;
}
span.pro-icon.icon-white svg path {
  fill: #fff;
}
label span.pro-icon svg path {
  fill: #fB9a28;
}
img.profile-header,
img.user-listing {
  display: block;
  width: 50%;
  background: #fff;
  -webkit-box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
  margin: -25px 0 15px 30px;
  position: relative;
  line-height: 0;
  border: 1px solid #ededed;
  padding: 4px;
  -webkit-filter: grayscale(100%) opacity(0.3);
  /* Safari 6.0 - 9.0 */
  filter: grayscale(100%) opacity(0.3);
}
img.profile-header:hover,
input[type=radio]:checked + img.profile-header,
img.profile-header.active,
img.user-listing:hover,
input[type=radio]:checked + img.user-listing,
img.user-listing.active {
  -webkit-filter: grayscale(0%) opacity(1) drop-shadow(8px 8px 5px #ccc);
  /* Safari 6.0 - 9.0 */
  filter: grayscale(0%) opacity(1) drop-shadow(8px 8px 5px #ccc);
}
.wpuf-subscription-pack-settings nav ul .wpuf-pro-field-tooltip,
.wpuf-pro-field-tooltip {
  background: #000;
  width: max-content;
  padding: 25px 35px 30px 20px;
  border-radius: 5px;
  color: #fff;
  position: absolute;
  top: 0;
  left: 50%;
  -webkit-transform: translate(-50%, -100%);
  transform: translate(-50%, -100%);
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  z-index: 99999;
  display: none;
  -webkit-opacity: 0;
  opacity: 0;
  -webkit-transition: opacity 0.8s;
  transition: opacity 0.8s;
}
h3.tooltip-header {
  color: #fff;
  font-size: 1.3rem;
}
.wpuf-subscription-pack-settings nav ul .wpuf-pro-field-tooltip ul li span.tooltip-check svg path,
.wpuf-pro-field-tooltip ul li span.tooltip-check svg path {
  fill: #139F84;
}
.wpuf-subscription-pack-settings nav ul .wpuf-pro-field-tooltip ul,
.wpuf-pro-field-tooltip ul {
  margin-bottom: 30px;
}
.wpuf-subscription-pack-settings nav ul .wpuf-pro-field-tooltip ul li,
.wpuf-pro-field-tooltip ul li {
  line-height: 1.5rem;
  font-weight: 400;
  margin-bottom: 6px;
}
span.tooltip-check {
  margin-right: 10px;
}
.wpuf-subscription-pack-settings nav ul .wpuf-pro-field-tooltip .pro-link,
.wpuf-pro-field-tooltip .pro-link {
  display: flex;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: 25px;
}
.wpuf-subscription-pack-settings nav ul .wpuf-pro-field-tooltip i,
.wpuf-pro-field-tooltip i {
  position: absolute;
  top: 100%;
  left: 50%;
  margin-left: -12px;
  width: 24px;
  height: 12px;
  overflow: hidden;
}
.wpuf-subscription-pack-settings nav ul .wpuf-pro-field-tooltip i::after,
.wpuf-pro-field-tooltip i::after {
  content: '';
  position: absolute;
  width: 12px;
  height: 12px;
  left: 50%;
  -webkit-transform: translate(-50%, -50%) rotate(45deg);
  transform: translate(-50%, -50%) rotate(45deg);
  background-color: #000;
}
tr.pro-preview.wpuf-subscription-recurring {
  position: relative;
}
tr.pro-preview.wpuf-subscription-recurring td {
  position: initial;
}
tr.pro-preview span.pro-icon,
tr span.pro-icon-title {
  position: relative;
  padding-top: 10px;
}
a span.pro-icon-title {
  position: relative;
}
a span.pro-icon-title .wpuf-pro-field-tooltip {
  left: 185px;
}
span.pro-icon-title:hover .wpuf-pro-field-tooltip {
  display: block;
  -webkit-opacity: 1;
  opacity: 1;
}
span.pro-icon:hover .wpuf-pro-field-tooltip {
  display: block;
  -webkit-opacity: 1;
  opacity: 1;
}
.wpuf-xmp-tag {
  display: inline;
}
#wpuf-search-section {
  display: flex;
  position: relative;
  align-items: center;
  color: red;
  cursor: pointer;
  justify-content: space-between;
  border-bottom: 1px solid #c8d7e1;
  height: 46px;
}
#wpuf-settings-search {
  width: 100%;
  height: 100%;
  background: #f1f1f1;
  border: 0;
  border-radius: 0;
  margin: 0;
  line-height: 20px;
  font-weight: 400;
  padding: 0 15px;
}
#wpuf-search-section .dashicons-no-alt {
  display: none;
  position: absolute;
  right: 5px;
}
.headway-header {
  display: flex;
  justify-content: space-between;
}
/* ... */

